--- a/index.html
+++ b/index.html
@@ -28,26 +28,13 @@
                 <option value="es">ES</option>
                 <option value="fr">FR</option>
             </select>
+            <button id="search-btn">
+                <img src="assets/img/icons/search.svg" alt="Search Icon" />
+            </button>
         </div>
     </nav>
-    <div id="landing-page" 
-        style="
-            display:grid;
-            grid-template-columns: 1fr 1fr;
-            width:100%;
-            align-items:center;
-            color: var(--Primary-Color-Dark-Blue-80, #002a48);
-            border-radius: 0 0 39.263px 39.263px;
-            background: var(--Linear, linear-gradient(103deg, #FCEED5 6.43%, #FCEED5 78.33%, #FFE7BA 104.24%));
-            padding-top: 80px;
-    ">
-        <div id="lanpage-text"
-            style="
-                padding-left:40px;
-                padding-top:20px;
-                width:100%;
-            "
-        >
+    <div id="landing-page">
+        <div id="lanpage-text">
             <h1 style="
                 font-size: 58.894px;
                 font-style: normal;
